src/main/java/SprintCSEMLAPR4Parser.java
// Generated from C:/Users/soare_wi5nw81/Desktop/d/Desktop/Faculdade/2 ano/2 semestre/LPROG/lprog2021sprintC/src/main/java\SprintCSEMLAPR4.g4 by ANTLR 4.9.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SprintCSEMLAPR4Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, STRING=30, DOUBLE=31, 
		INT=32, MAIS=33, IGUAL=34, MENOS=35, MUL=36, DIV=37, VIRG=38, DOISPONTOS=39, 
		ESPACO=40, WS=41, ENTER=42;
	public static final int
		RULE_inicio = 0, RULE_lerRapelCliente = 1, RULE_alterarRapelCliente = 2, 
		RULE_lerPrecoProduto = 3, RULE_alterarPrecoProduto = 4, RULE_calcularPrecoTotal = 5, 
		RULE_aplicarDescontoRapel = 6, RULE_enviarEmail = 7, RULE_reportarAnomaliaDeComunicacao = 8, 
		RULE_reportarAnomaliaNumEquipamento = 9, RULE_reportarAnomaliaNumaApp = 10, 
		RULE_requerCotacaoVendaPGrosso = 11, RULE_autAppDescFinanc = 12, RULE_alterarNibCliente = 13, 
		RULE_alterarResidenciaCliente = 14, RULE_alterarEstadoCivilCliente = 15, 
		RULE_atualHabilit = 16, RULE_marcaFerias = 17, RULE_justificaFalta = 18, 
		RULE_informaAusenciaFutura = 19, RULE_remetente = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "lerRapelCliente", "alterarRapelCliente", "lerPrecoProduto", 
			"alterarPrecoProduto", "calcularPrecoTotal", "aplicarDescontoRapel", 
			"enviarEmail", "reportarAnomaliaDeComunicacao", "reportarAnomaliaNumEquipamento", 
			"reportarAnomaliaNumaApp", "requerCotacaoVendaPGrosso", "autAppDescFinanc", 
			"alterarNibCliente", "alterarResidenciaCliente", "alterarEstadoCivilCliente", 
			"atualHabilit", "marcaFerias", "justificaFalta", "informaAusenciaFutura", 
			"remetente"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'lerRapelCliente('", "'.txt'", "'.xml'", "')'", "'alterarRapelCliente('", 
			"'lerPrecoProduto('", "'alterarPrecoProduto('", "'calcularPrecoTotal('", 
			"'aplicarDescontoRapel('", "'enviarEmail('", "'reportarAnomaliaDeComunicacao('", 
			"'.png'", "'.jpg'", "'.jpeg'", "'reportarAnomaliaNumEquipamento('", "'reportarAnomaliaNumaApp('", 
			"'requerCotacaoVendaPGrosso('", "'autAppDescFinanc('", "'0'", "'\u00C3\u0161nica'", 
			"'alterarNibCliente('", "'alterarResidenciaCliente('", "'alterarEstadoCivilCliente('", 
			"'atualizaHabilit('", "'marcaFerias('", "'justificaFalta('", "'informaAusenciaFutura('", 
			"'@'", "'.'", null, null, null, "'+'", "'='", "'-'", "'*'", "'/'", "','", 
			"':'", "' '", null, "'\n'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "STRING", "DOUBLE", "INT", "MAIS", 
			"IGUAL", "MENOS", "MUL", "DIV", "VIRG", "DOISPONTOS", "ESPACO", "WS", 
			"ENTER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SprintCSEMLAPR4.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SprintCSEMLAPR4Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InicioContext extends ParserRuleContext {
		public InicioContext inicio() {
			return getRuleContext(InicioContext.class,0);
		}
		public LerRapelClienteContext lerRapelCliente() {
			return getRuleContext(LerRapelClienteContext.class,0);
		}
		public TerminalNode ENTER() { return getToken(SprintCSEMLAPR4Parser.ENTER, 0); }
		public AlterarRapelClienteContext alterarRapelCliente() {
			return getRuleContext(AlterarRapelClienteContext.class,0);
		}
		public LerPrecoProdutoContext lerPrecoProduto() {
			return getRuleContext(LerPrecoProdutoContext.class,0);
		}
		public AlterarPrecoProdutoContext alterarPrecoProduto() {
			return getRuleContext(AlterarPrecoProdutoContext.class,0);
		}
		public CalcularPrecoTotalContext calcularPrecoTotal() {
			return getRuleContext(CalcularPrecoTotalContext.class,0);
		}
		public AplicarDescontoRapelContext aplicarDescontoRapel() {
			return getRuleContext(AplicarDescontoRapelContext.class,0);
		}
		public EnviarEmailContext enviarEmail() {
			return getRuleContext(EnviarEmailContext.class,0);
		}
		public ReportarAnomaliaDeComunicacaoContext reportarAnomaliaDeComunicacao() {
			return getRuleContext(ReportarAnomaliaDeComunicacaoContext.class,0);
		}
		public ReportarAnomaliaNumEquipamentoContext reportarAnomaliaNumEquipamento() {
			return getRuleContext(ReportarAnomaliaNumEquipamentoContext.class,0);
		}
		public ReportarAnomaliaNumaAppContext reportarAnomaliaNumaApp() {
			return getRuleContext(ReportarAnomaliaNumaAppContext.class,0);
		}
		public RequerCotacaoVendaPGrossoContext requerCotacaoVendaPGrosso() {
			return getRuleContext(RequerCotacaoVendaPGrossoContext.class,0);
		}
		public AutAppDescFinancContext autAppDescFinanc() {
			return getRuleContext(AutAppDescFinancContext.class,0);
		}
		public AlterarNibClienteContext alterarNibCliente() {
			return getRuleContext(AlterarNibClienteContext.class,0);
		}
		public AlterarResidenciaClienteContext alterarResidenciaCliente() {
			return getRuleContext(AlterarResidenciaClienteContext.class,0);
		}
		public AlterarEstadoCivilClienteContext alterarEstadoCivilCliente() {
			return getRuleContext(AlterarEstadoCivilClienteContext.class,0);
		}
		public AtualHabilitContext atualHabilit() {
			return getRuleContext(AtualHabilitContext.class,0);
		}
		public MarcaFeriasContext marcaFerias() {
			return getRuleContext(MarcaFeriasContext.class,0);
		}
		public JustificaFaltaContext justificaFalta() {
			return getRuleContext(JustificaFaltaContext.class,0);
		}
		public InformaAusenciaFuturaContext informaAusenciaFutura() {
			return getRuleContext(InformaAusenciaFuturaContext.class,0);
		}
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SprintCSEMLAPR4Listener ) ((SprintCSEMLAPR4Listener)listener).enterInicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SprintCSEMLAPR4Listener ) ((SprintCSEMLAPR4Listener)listener).exitInicio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SprintCSEMLAPR4Visitor ) return ((SprintCSEMLAPR4Visitor<? extends T>)visitor).visitInicio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		return inicio(0);
	}

	private InicioContext inicio(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		InicioContext _localctx = new InicioContext(_ctx, _parentState);
		InicioContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_inicio, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			}
			_ctx.stop = _input.LT(-1);
			setState(121);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(119);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						_localctx = new InicioContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_inicio);
						setState(43);
						if (!(precpred(_ctx, 19))) throw new FailedPredicateException(this, "precpred(_ctx, 19)");
						setState(44);
						lerRapelCliente();
						setState(45);
						match(ENTER);
						}
						break;
					case 2:
						{
						_localctx = new InicioContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_inicio);
						setState(47);
						if (!(precpred(_ctx, 18))) throw new FailedPredicateException(this, "precpred(_ctx, 18)");
						setState(48);
						alterarRapelCliente();
						setState(49);
						match(ENTER);
						}
						break;
					case 3:
						{
						_localctx = new InicioContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_inicio);
						setState(51);
						if (!(precpred(_ctx, 17))) throw new FailedPredicateException(this, "precpred(_ctx, 17)");
						setState(52);
						lerPrecoProduto();
						setState(53);
						match(ENTER);
						}
						break;
					case 4:
						{
						_localctx = new InicioContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_inicio);
						setState(55);
						if (!(precpred(_ctx, 16))) throw new FailedPredicateException(this, "precpred(_ctx, 16)");
						setState(56);
						alterarPrecoProduto();
						setState(57);
						match(ENTER);
						}
						break;
					case 5:
						{
						_localctx = new InicioContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_inicio);
						setState(59);
						if (!(precpred(_ctx, 15))) throw new FailedPredicateException(this, "precpred(_ctx, 15)");
						setState(60);
						calcularPrecoTotal();
						setState(61);
						match(ENTER);
						}
						break;
					case 6:
						{
						_localctx = new InicioContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_inicio);
						setState(63);
						if (!(precpred(_ctx, 14))) throw new FailedPredicateException(this, "precpred(_ctx, 14)");
						setState(64);
						aplicarDescontoRapel();
						setState(65);
						match(ENTER);
						}
						break;
					case 7:
						{
						_localctx = new InicioContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_inicio);
						setState(67);
						if (!(precpred(_ctx, 13))) throw new FailedPredicateException(this, "precpred(_ctx, 13)");
						setState(68);
						enviarEmail();
						setState(69);
						match(ENTER);
						}
						break;
					case 8:
						{
						_localctx = new InicioContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_inicio);
						setState(71);
						if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
						setState(72);
						reportarAnomaliaDeComunicacao();
						setState(73);
						match(ENTER);
						}
						break;
					case 9:
						{
						_localctx = new InicioContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_inicio);
						setState(75);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(76);
						reportarAnomaliaNumEquipamento();
						setState(77);
						match(ENTER);
						}
						break;
					case 10:
						{
						_localctx = new InicioContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_inicio);
						setState(79);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(80);
						reportarAnomaliaNumaApp();
						setState(81);
						match(ENTER);
						}
						break;
					case 11:
						{
						_localctx = new InicioContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_inicio);
						setState(83);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(84);
						requerCotacaoVendaPGrosso();
						setState(85);
						match(ENTER);
						}
						break;
					case 12:
						{
						_localctx = new InicioContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_inicio);
						setState(87);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(88);
						autAppDescFinanc();
						setState(89);
						match(ENTER);
						}
						break;
					case 13:
						{
						_localctx = new InicioContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_inicio);
						setState(91);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(92);
						alterarNibCliente();
						setState(93);
						match(ENTER);
						}
						break;
					case 14:
						{
						_localctx = new InicioContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_inicio);
						setState(95);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(96);
						alterarResidenciaCliente();
						setState(97);
						match(ENTER);
						}
						break;
					case 15:
						{
						_localctx = new InicioContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_inicio);
						setState(99);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(100);
						alterarEstadoCivilCliente();
						setState(101);
						match(ENTER);
						}
						break;
					case 16:
						{
						_localctx = new InicioContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_inicio);
						setState(103);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(104);
						atualHabilit();
						setState(105);
						match(ENTER);
						}
						break;
					case 17:
						{
						_localctx = new InicioContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_inicio);
						setState(107);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(108);
						marcaFerias();
						setState(109);
						match(ENTER);
						}
						break;
					case 18:
						{
						_localctx = new InicioContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_inicio);
						setState(111);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(112);
						justificaFalta();
						setState(113);
						match(ENTER);
						}
						break;
					case 19:
						{
						_localctx = new InicioContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_inicio);
						setState(115);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(116);
						informaAusenciaFutura();
						setState(117);
						match(ENTER);
						}
						break;
					}
					} 
				}
				setState(123);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class LerRapelClienteContext extends ParserRuleContext {
		public LerRapelClienteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lerRapelCliente; }
	 
		public LerRapelClienteContext() { }
		public void copyFrom(LerRapelClienteContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MetodoLerRapelClienteContext extends LerRapelClienteContext {
		public Token fich;
		public Token tipo;
		public Token idCliente;
		public TerminalNode VIRG() { return getToken(SprintCSEMLAPR4Parser.VIRG, 0); }
		public TerminalNode STRING() { return getToken(SprintCSEMLAPR4Parser.STRING, 0); }
		public TerminalNode INT() { return getToken(SprintCSEMLAPR4Parser.INT, 0); }
		public MetodoLerRapelClienteContext(LerRapelClienteContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SprintCSEMLAPR4Listener ) ((SprintCSEMLAPR4Listener)listener).enterMetodoLerRapelCliente(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SprintCSEMLAPR4Listener ) ((SprintCSEMLAPR4Listener)listener).exitMetodoLerRapelCliente(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SprintCSEMLAPR4Visitor ) return ((SprintCSEMLAPR4Visitor<? extends T>)visitor).visitMetodoLerRapelCliente(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LerRapelClienteContext lerRapelCliente() throws RecognitionException {
		LerRapelClienteContext _localctx = new LerRapelClienteContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_lerRapelCliente);
		int _la;
		try {
			_localctx = new MetodoLerRapelClienteContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(T__0);
			setState(125);
			((MetodoLerRapelClienteContext)_localctx).fich = match(STRING);
			setState(126);
			((MetodoLerRapelClienteContext)_localctx).tipo = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==T__1 || _la==T__2) ) {
				((MetodoLerRapelClienteContext)_localctx).tipo = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(127);
			match(VIRG);
			setState(128);
			((MetodoLerRapelClienteContext)_localctx).idCliente = match(INT);
			setState(129);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlterarRapelClienteContext extends ParserRuleContext {
		public AlterarRapelClienteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alterarRapelCliente; }
	 
		public AlterarRapelClienteContext() { }
		public void copyFrom(AlterarRapelClienteContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MetodoAlterarRapelClienteContext extends AlterarRapelClienteContext {
		public Token fich;
		public Token tipo;
		public Token idCliente;
		public Token novoRapel;
		public List<TerminalNode> VIRG() { return getTokens(SprintCSEMLAPR4Parser.VIRG); }
		public TerminalNode VIRG(int i) {
			return getToken(SprintCSEMLAPR4Parser.VIRG, i);
		}
		public TerminalNode STRING() { return getToken(SprintCSEMLAPR4Parser.STRING, 0); }
		public List<TerminalNode> INT() { return getTokens(SprintCSEMLAPR4Parser.INT); }
		public TerminalNode INT(int i) {
			return getToken(SprintCSEMLAPR4Parser.INT, i);
		}
		public MetodoAlterarRapelClienteContext(AlterarRapelClienteContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SprintCSEMLAPR4Listener ) ((SprintCSEMLAPR4Listener)listener).enterMetodoAlterarRapelCliente(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SprintCSEMLAPR4Listener ) ((SprintCSEMLAPR4Listener)listener).exitMetodoAlterarRapelCliente(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SprintCSEMLAPR4Visitor ) return ((SprintCSEMLAPR4Visitor<? extends T>)visitor).visitMetodoAlterarRapelCliente(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AlterarRapelClienteContext alterarRapelCliente() throws RecognitionException {
		AlterarRapelClienteContext _localctx = new AlterarRapelClienteContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_alterarRapelCliente);
		int _la;
		try {
			_localctx = new MetodoAlterarRapelClienteContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(T__4);
			setState(132);
			((MetodoAlterarRapelClienteContext)_localctx).fich = match(STRING);
			setState(133);
			((MetodoAlterarRapelClienteContext)_localctx).tipo = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==T__1 || _la==T__2) ) {
				((MetodoAlterarRapelClienteContext)_localctx).tipo = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(134);
			match(VIRG);
			setState(135);
			((MetodoAlterarRapelClienteContext)_localctx).idCliente = match(INT);
			setState(136);
			match(VIRG);
			setState(137);
			((MetodoAlterarRapelClienteContext)_localctx).novoRapel = match(INT);
			setState(138);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LerPrecoProdutoContext extends ParserRuleContext {
		public LerPrecoProdutoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lerPrecoProduto; }
	 
		public LerPrecoProdutoContext() { }
